# cpp-project-template

./: .clang-format  CMakeLists.txt  README.md  init.ps1
scripts/: build.ps1  clean.ps1  log.ps1  run.ps1
src/: CMakeLists.txt  main.cpp
